[project]
name = "pi3"
version = "0.0.1"
description = ""
readme = "README.md"
dependencies = [
    # basic
    "torch",
    "torchvision",
    "einops",
    "plyfile",
    "huggingface_hub",
    "safetensors",
    "opencv-python"
]

[tool.hatch.build.targets.wheel]
packages = ["pi3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
